--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- LINKS -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- DETAILS -->
     <title>FMT - M02S01 - Exercicios</title>
 </head>
 <body>
