--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="answer-wrapper-horizontal">
                     <div class="checkbox-wrapper">
                         <input type="checkbox" name="question-7" id="question-7-1" class="input-checkbox" value="<!-- -->">
-                        <label for="question-7-1" id="label-7-1">&lt;!-- --&gt;</label>
+                        <label for="question-7-1">&lt;!-- --&gt;</label>
                     </div>
 
                     <div class="checkbox-wrapper">
@@ -188,5 +188,10 @@
             <button type="submit" id="submit-main">Enviar</button>
         </form>
     </main>
+
+    <footer>
+        <p>Todos os direitos reservados.</p>
+        <a href="https://github.com/anahperes" target="_blank">© Ana Helena Peres 2024</a>
+    </footer>
 </body>
 </html>
